--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "1.0.0",
 	"description": "Development for Test Frontend in crouud company",
 	"scripts": {
-		"init": "sass src/style/index.scss public/build/css/index.css",
-		"dev": "sass --watch src/style/index.scss public/build/css/index.css"
+		"init": "sass src/index.scss public/build/css/index.css",
+		"dev": "sass --watch src/index.scss public/build/css/index.css"
 	},
 	"author": "Mikael Aditya Nugroho",
 	"license": "ISC"
